8313265: Move the FFM API out of preview
Reviewed-by: mcimadamore